force-app/main/default/objects/docebo_v3__CourseEnrollment__c/docebo_v3__CourseEnrollment__c.object-meta.xml
<CustomObject>
    <description>Represents Docebo&apos;s enrollments to courses.</description>
    <label>Course Enrollment</label>
    <nameField>
        <label>Course Enrollment Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>