force-app/main/default/objects/docebo_v3__CourseEnrollment__c/fields/docebo_v3__Credits__c.field-meta.xml
<CustomField>
    <fullName>docebo_v3__Credits__c</fullName>
    <label>Credits</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>