force-app/main/default/objects/docebo_v3__CourseEnrollment__c/fields/docebo_v3__Status__c.field-meta.xml
<CustomField>
    <fullName>docebo_v3__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>docebo_v3__Status</valueSetName>
    </valueSet>
</CustomField>