force-app/main/default/objects/docebo_v3__CourseEnrollment__c/fields/docebo_v3__TimeInCourse__c.field-meta.xml
<CustomField>
    <fullName>docebo_v3__TimeInCourse__c</fullName>
    <label>Time in course</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>