force-app/main/default/objects/docebo_v3__CourseEnrollment__c/listViews/docebo_v3__All.listView-meta.xml
<ListView>
    <fullName>docebo_v3__All</fullName>
    <columns>docebo_v3__Course__c</columns>
    <columns>docebo_v3__DoceboUser__c</columns>
    <columns>docebo_v3__Status__c</columns>
    <columns>docebo_v3__Credits__c</columns>
    <columns>docebo_v3__Score__c</columns>
    <columns>docebo_v3__EnrollmentStartDate__c</columns>
    <columns>docebo_v3__EnrollmentCompletionDate__c</columns>
    <columns>docebo_v3__Completion__c</columns>
    <columns>docebo_v3__EnrolmentId__c</columns>
    <columns>docebo_v3__UnenrollmentDate__c</columns>
    <columns>docebo_v3__TimeInCourse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>